--- a/app/src/main/res/layout/item_timeline.xml
+++ b/app/src/main/res/layout/item_timeline.xml
@@ -13,9 +13,11 @@
         android:id="@+id/timeline"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
+        android:theme="@style/Theme.Tankauswertung.TimelineView"
         app:markerSize="40dp"
         app:markerInCenter="true"
         app:lineWidth="3dp"
+        app:linePadding="3dp"
         app:lineStyle="normal"/>
 
     <!-- Card-Prototyp -->
@@ -54,16 +56,14 @@
                     android:layout_height="wrap_content"
                     android:id="@+id/textViewTimelineDatum"
                     android:textSize="12sp"
-                    tools:text="Testdatum"
-                    android:textColor="@color/blackblue_light"/>
+                    tools:text="Testdatum" />
 
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
                     android:id="@+id/textViewTimelineBeschreibung"
-                    tools:text="Testbeschreibung"
-                    android:textColor="@color/blackblue_light"/>
+                    tools:text="Testbeschreibung" />
 
             </LinearLayout>
 
