--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -4,24 +4,72 @@
     <style name="Theme.Tankauswertung" parent="Theme.MaterialComponents.DayNight.NoActionBar">
 
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/blackblue_light</item>
-        <item name="colorPrimaryVariant">@color/white</item>
-        <item name="colorOnPrimary">@color/white</item>
+        <item name="colorPrimary">@color/blau_1</item>
+        <item name="colorPrimaryVariant">@color/blau_2</item>
+        <item name="colorOnPrimary">@color/white_darker</item>
 
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/blackblue_light</item>
-        <item name="colorSecondaryVariant">@color/white</item>
-        <item name="colorOnSecondary">@color/white</item>
+        <item name="colorSecondary">@color/blau_1</item>
+        <item name="colorSecondaryVariant">@color/blau_2</item>
+        <item name="colorOnSecondary">@color/white_darker</item>
 
-        <!-- Customize your theme here. -->
-        <item name="cardBackgroundColor">@color/grey</item>
-
+        <!-- custom -->
+        <item name="cardBackgroundColor">@color/black_light</item>
         <item name="android:statusBarColor" tools:targetApi="l">@color/black</item>
 
     </style>
 
+    <!-- Toolbar -->
+
     <style name="Theme.Tankauswertung.Toolbar" parent="Theme.Tankauswertung">
-        <item name="android:background">@color/blackblue_lighter</item>
+        <item name="android:background">@color/black_light</item>
+    </style>
+
+    <!-- TextView -->
+
+    <style name="Theme.Tankauswertung.TextViewDark" parent="Theme.Tankauswertung">
+        <item name="android:textColor">@color/white_darker</item>
+    </style>
+
+    <style name="Theme.Tankauswertung.TextViewAppName" parent="Theme.Tankauswertung">
+        <item name="android:textColor">@color/blau_1</item>
+    </style>
+
+    <!-- Button, ImageButton -->
+
+    <style name="Theme.Tankauswertung.Button" parent="Widget.MaterialComponents.Button">
+        <item name="android:backgroundTint">@color/blackblue</item>
+        <item name="android:textColor">@color/white_darker</item>
+    </style>
+
+    <style name="Theme.Tankauswertung.ButtonSelected" parent="Widget.MaterialComponents.Button">
+        <item name="android:backgroundTint">?attr/colorPrimary</item>
+    </style>
+
+    <style name="Theme.Tankauswertung.ImageButton" parent="Widget.AppCompat.ImageButton">
+        <item name="android:backgroundTint">@color/blackblue</item>
+        <item name="android:tint">@color/white_darker</item>
+        <item name="android:elevation">2dp</item>
+    </style>
+
+    <style name="Theme.Tankauswertung.ImageButtonSelected" parent="Widget.AppCompat.ImageButton">
+        <item name="android:backgroundTint">?attr/colorPrimary</item>
+        <item name="android:tint">@color/white_darker</item>
+        <item name="android:elevation">2dp</item>
+    </style>
+
+    <!-- TimelineView -->
+
+    <style name="Theme.Tankauswertung.TimelineView">
+        <item name="startLineColor">@color/gray_timeline_dark</item>
+        <item name="endLineColor">@color/gray_timeline_dark</item>
+    </style>
+
+    <!-- internal stuff -->
+
+    <style name="Theme.NavDrawer.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+    <style name="Theme.NavDrawer.PopupOverlay" parent="ThemeOverlay.AppCompat.Dark">
+        <item name="android:background">@android:color/transparent</item>
     </style>
 
 </resources>
