--- a/app/src/main/res/layout/fragment_stats.xml
+++ b/app/src/main/res/layout/fragment_stats.xml
@@ -58,7 +58,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:layout_marginBottom="10dp"
         android:text=""
         android:textSize="21sp"
         style="@style/Theme.Tankauswertung.TextViewDark"
@@ -70,6 +69,7 @@
         android:id="@+id/fragment_verticalbarchart_chart"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:layout_marginTop="10dp"
         android:layout_marginStart="15dp"
         android:layout_marginEnd="15dp"
         app:layout_constraintBottom_toTopOf="@id/textViewZeitraum"
