Eingaben mit Komma möglich gemacht, keine Punkteingaben mehr möglich.

--- a/app/src/main/res/layout/fragment_forecast.xml
+++ b/app/src/main/res/layout/fragment_forecast.xml
@@ -34,7 +34,8 @@
                 android:id="@+id/editTextKalkulationStreckenlaenge"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:inputType="numberDecimal"
+                android:inputType="number"
+                android:digits="0123456789,"
                 android:text="@string/hundred_number" />
 
             <!-- innerorts -->
