--- a/app/src/main/res/layout/fragment_new_car.xml
+++ b/app/src/main/res/layout/fragment_new_car.xml
@@ -74,7 +74,8 @@
                     android:gravity="center"
                     android:layout_width="45dp"
                     android:layout_height="wrap_content"
-                    android:inputType="numberDecimal"
+                    android:inputType="number"
+                    android:digits="0123456789,"
                     android:text="@string/zero_number" />
 
                 <SeekBar
@@ -109,7 +110,8 @@
                     android:gravity="center"
                     android:layout_width="45dp"
                     android:layout_height="wrap_content"
-                    android:inputType="numberDecimal"
+                    android:inputType="number"
+                    android:digits="0123456789,"
                     android:text="@string/zero_number" />
 
                 <SeekBar
@@ -143,7 +145,8 @@
                     android:gravity="center"
                     android:layout_width="45dp"
                     android:layout_height="wrap_content"
-                    android:inputType="numberDecimal"
+                    android:inputType="number"
+                    android:digits="0123456789,"
                     android:text="@string/zero_number" />
 
                 <SeekBar
@@ -171,7 +174,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="5dp"
                 android:layout_marginEnd="5dp"
-                android:inputType="numberDecimal"
+                android:inputType="number"
+                android:digits="0123456789,"
                 android:text="@string/zero_number" />
 
             <!-- Kilometerstand -->
@@ -189,7 +193,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="5dp"
                 android:layout_marginEnd="5dp"
-                android:inputType="numberDecimal"
+                android:inputType="number"
+                android:digits="0123456789,"
                 android:text="@string/zero_number" />
 
             <!-- Tankvolumen -->
@@ -208,7 +213,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="5dp"
                 android:layout_marginEnd="5dp"
-                android:inputType="numberDecimal"
+                android:inputType="number"
+                android:digits="0123456789,"
                 android:text="@string/default_tankvolumen" />
 
             <!-- Aktueller Tankstand -->
