--- a/app/src/main/res/layout/fragment_new_strecke.xml
+++ b/app/src/main/res/layout/fragment_new_strecke.xml
@@ -34,7 +34,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="5dp"
                 android:layout_marginEnd="5dp"
-                android:inputType="numberDecimal"
+                android:inputType="number"
+                android:digits="0123456789,"
                 android:text="@string/zero_number" />
 
             <!-- Aktueller Tankstand -->
