--- a/app/src/main/res/layout/fragment_forecast.xml
+++ b/app/src/main/res/layout/fragment_forecast.xml
@@ -35,6 +35,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="number"
+                android:maxLength="@integer/editTextMaxLengthDecimalNumber"
                 android:digits="0123456789,"
                 android:text="@string/hundred_number" />
 
