--- a/app/src/main/res/layout/fragment_new_car.xml
+++ b/app/src/main/res/layout/fragment_new_car.xml
@@ -25,6 +25,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="text"
+                android:maxLength="@integer/editTextMaxLengthString"
                 android:hint="@string/anzeigename"
                 android:textSize="24sp" />
 
@@ -75,6 +76,7 @@
                     android:layout_width="45dp"
                     android:layout_height="wrap_content"
                     android:inputType="number"
+                    android:maxLength="@integer/editTextMaxLengthDecimalNumber"
                     android:digits="0123456789,"
                     android:text="@string/zero_number" />
 
@@ -111,6 +113,7 @@
                     android:layout_width="45dp"
                     android:layout_height="wrap_content"
                     android:inputType="number"
+                    android:maxLength="@integer/editTextMaxLengthDecimalNumber"
                     android:digits="0123456789,"
                     android:text="@string/zero_number" />
 
@@ -146,6 +149,7 @@
                     android:layout_width="45dp"
                     android:layout_height="wrap_content"
                     android:inputType="number"
+                    android:maxLength="@integer/editTextMaxLengthDecimalNumber"
                     android:digits="0123456789,"
                     android:text="@string/zero_number" />
 
@@ -175,6 +179,7 @@
                 android:layout_marginStart="5dp"
                 android:layout_marginEnd="5dp"
                 android:inputType="number"
+                android:maxLength="@integer/editTextMaxLengthDecimalNumber"
                 android:digits="0123456789,"
                 android:text="@string/zero_number" />
 
@@ -194,6 +199,7 @@
                 android:layout_marginStart="5dp"
                 android:layout_marginEnd="5dp"
                 android:inputType="number"
+                android:maxLength="@integer/editTextMaxLengthDecimalNumber"
                 android:digits="0123456789,"
                 android:text="@string/zero_number" />
 
@@ -214,6 +220,7 @@
                 android:layout_marginStart="5dp"
                 android:layout_marginEnd="5dp"
                 android:inputType="number"
+                android:maxLength="@integer/editTextMaxLengthDecimalNumber"
                 android:digits="0123456789,"
                 android:text="@string/default_tankvolumen" />
 
