--- a/app/src/main/res/layout/fragment_new_tankvorgang.xml
+++ b/app/src/main/res/layout/fragment_new_tankvorgang.xml
@@ -36,6 +36,7 @@
                 android:layout_marginStart="5dp"
                 android:layout_marginEnd="5dp"
                 android:inputType="number"
+                android:maxLength="@integer/editTextMaxLengthDecimalNumber"
                 android:digits="0123456789,"
                 android:text="@string/zero_number" />
 
@@ -53,6 +54,7 @@
                 android:layout_marginStart="5dp"
                 android:layout_marginEnd="5dp"
                 android:inputType="number"
+                android:maxLength="@integer/editTextMaxLengthDecimalNumber"
                 android:digits="0123456789,"
                 android:text="@string/zero_number" />
 
