--- a/app/src/main/res/layout/item_timeline.xml
+++ b/app/src/main/res/layout/item_timeline.xml
@@ -44,7 +44,7 @@
             android:orientation="horizontal" >
 
             <LinearLayout
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:gravity="center"
@@ -72,11 +72,11 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
+                android:layout_marginStart="10dp"
                 android:gravity="end"
                 android:visibility="invisible"
                 android:contentDescription="@string/ereignis_bearbeiten"
                 android:background="#00FFFFFF"
-                android:layout_weight="1"
                 app:srcCompat="@drawable/ic_baseline_edit_24" />
 
         </LinearLayout>
