--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -12,41 +12,36 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="30dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginRight="30dp"
             android:orientation="vertical">
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="30dp"
-                android:layout_marginRight="30dp"
-                android:layout_marginTop="20dp"
-                android:orientation="vertical">
+            <!-- Text Label -->
 
-                <!-- Text Label -->
-
-                <TextView
-                    android:layout_width="fill_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="10dp"
-                    android:text="@string/theme" />
-
-                <!-- Dropdown Dark Mode -->
-
-                <Spinner
-                    android:id="@+id/spinnerDarkMode"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="5dp"
-                    android:prompt="@string/dark_mode" />
-
-            </LinearLayout>
-
-            <ListView
-                android:id="@+id/listViewLicenses"
-                android:layout_width="match_parent"
+            <TextView
+                android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
-                app:layout_constraintTop_toTopOf="@id/spinnerDarkMode" />
+                android:text="@string/theme" />
+
+            <!-- Dropdown Dark Mode -->
+
+            <Spinner
+                android:id="@+id/spinnerDarkMode"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:prompt="@string/dark_mode" />
+
+            <Button
+                android:id="@+id/buttonLizenzen"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:layout_gravity="center"
+                android:text="@string/lizenzen"
+                style="@style/Theme.Tankauswertung.ButtonTransparent" />
 
         </LinearLayout>
 
