--- a/app/src/main/res/layout/fragment_new_car.xml
+++ b/app/src/main/res/layout/fragment_new_car.xml
@@ -230,7 +230,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="15dp"
-                android:text="@string/tankstand_l" />
+                android:text="@string/tankstand_prozent" />
 
             <LinearLayout
                 android:layout_width="match_parent"
